[package]
name = "com-sandpolis-distagent-rust"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.8"
dotproperties = "0.1"
log = "0.4"
rust-embed = { version = "6.0", default-features = false, features = ["debug-embed"] }
